# matter-apps

./: .gitignore  CLAUDE.md  README.md  init  sdk-location.default
common/: CLAUDE.md
common/app_reset/: app_reset.cpp  app_reset.h
common/cmake_common/: components_include.cmake
common/features/: app_a01nyub.cpp  app_a01nyub.h  app_button.cpp  app_button.h  app_hx711.cpp  app_hx711.h  app_matter.cpp  app_onoff.cpp  app_onoff.h  app_openthread.h  app_sdn.cpp  app_sdn.h  app_sensor.cpp  app_sensor.h  hx711.cpp  hx711.h
light/: CMakeLists.txt  README.md
light/main/: CMakeLists.txt  app_driver.cpp  app_main.cpp  app_priv.h
omni/: CLAUDE.md  CMakeLists.txt  README.md  sdkconfig.defaults.esp32c6  sdkconfig.defaults.esp32s3
omni/main/: CMakeLists.txt  Kconfig.projbuild  app_button.cpp  app_button.h  app_main.cpp  app_matter.cpp  app_matter.h  app_openthread.h  app_sensor.cpp  app_sensor.h
sensor/: README.md
switch/: CMakeLists.txt  README.md  sdkconfig.defaults
switch/main/: Kconfig.projbuild  app_button.cpp  app_button.h  app_driver.cpp  app_main.cpp  app_priv.h
